Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
       </header>
       <section>
         <h1>
-<a id="docker-envoy" class="anchor" href="#docker-envoy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker-Envoy</h1>
+<a id="docker-envoy-" class="anchor" href="#docker-envoy-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker-Envoy <a href="https://travis-ci.org/Paritosh-Anand/Docker-Envoy"><img src="https://travis-ci.org/Paritosh-Anand/Docker-Envoy.svg?branch=master" alt="Build Status"></a>
+</h1>
 
 <p>Utility to send docker events to kafka.</p>
 
-<p>Plan is to create below design.
+<p>Plan is to create left side of the below design. Pushing required Docker events to Kafka will be useful to store/maintain state of services running in Docker ecosystem. Also we can consume events as messages from Kafka and execute desired custom tasks.
 <img src="https://d2mxuefqeaa7sj.cloudfront.net/s_5E4E5D4E7819918F4A7FFC5AD14BA5406AEE511BEF98A38F756ED666B912BEA8_1469560303675_docker+events.PNG" alt="Docker Events"></p>
 
 <p>Just started on this project, so there may be bugs right now. Will be adding review and test cases soon.</p>
